--- a/_config.yml
+++ b/_config.yml
@@ -7,20 +7,20 @@ permalink:        pretty
 relative_permalinks: true
 
 # Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://hyde.getpoole.com
+title:            tucfa.ca
+tagline:          'Faculty Association of Tyndale University College, Toronto'
+description:      'Official website of the Tyndale University College Faculty Association.'
+url:              http://tucfa.ca
 baseurl:          /
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           'FA Secretary-Treasurer'
+  url:            http://danieldriver.com
 
 paginate:         5
 
 # Custom vars
-version:          2.1.0
+version:          1.0.0
 
 github:
-  repo:           https://github.com/poole/hyde
+  repo:           https://github.com/tucfa/tucfa.github.io
